SERVER-71985 Automatically retry time-series insert on DuplicateKey error

(cherry picked from commit f181b82f053bf4a167c139df976edae2dc708688)